--- a/see.html
+++ b/see.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub</title>
+    <title>GitHub Workshop</title>
 </head>
 <body>
     <h1>This file is for Dart GitHub Workshop</h1>
